--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   image_picker: ^1.1.2
   camera: ^0.11.0+1
   google_ml_vision: ^0.0.8
+  super_tooltip: ^2.0.7
   # google_mlkit_text_recognition: ^0.13.0
 
 dev_dependencies:
