--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_ml_vision: ^0.0.8
   super_tooltip: ^2.0.7
   # google_mlkit_text_recognition: ^0.13.0
+  badges: ^3.1.2
 
 dev_dependencies:
   flutter_test:
